[v0.9.2] > Fix carousel height on small devices

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -16,7 +16,8 @@
 .carousel_image_container{
   overflow: hidden;
   width: 100vw;
-  height: 90vh;
+  height: 80vh;
+  @media (min-width: 550px){height: 90vh;}
   margin-left: -15px;
 }
 
@@ -26,7 +27,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 100vw;
-  max-height: 90vh;
+  max-height: 80vh;
+  @media (min-width: 550px){height: 90vh;}
   min-width: 50vw;
   padding: 8vh;
 }
